# clio-ai

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
npm/: package.json
npm/scripts/: install.js
src/: config.rs  llm.rs  main.rs  tools.rs
