[package]
name = "clio-ai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clio-ai"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "12"
dotenvy = "0.15"
dirs = "5"
